--- a/client_gen/Dockerfile
+++ b/client_gen/Dockerfile
@@ -6,11 +6,11 @@ RUN virtualenv /env
 
 #RUN git clone https://code.google.com/p/google-apis-client-generator /app
 
-#RUN git clone https://github.com/rwl/google-apis-client-generator.git /app
-#RUN /env/bin/pip install
-#RUN export PYTHONPATH=/app/src:$PYTHONPATH
+RUN git clone https://github.com/rwl/google-apis-client-generator.git /app
+RUN /env/bin/pip install .
+RUN export PYTHONPATH=/app/src:$PYTHONPATH
 
-RUN pip install google-apis-client-generator
+#RUN pip install google-apis-client-generator
 
 #RUN $(/bin/pwd)/googleapis/codegen/generate_library.py \
 #  --input=api_json_file.json --api_name=toyapi --api_version=v1 \
@@ -18,8 +18,8 @@ RUN pip install google-apis-client-generator
 
 WORKDIR /client_gen
 
-#ENTRYPOINT ["/env/bin/python", "/app/src/googleapis/codegen/generate_library.py"]
-ENTRYPOINT ["generate_library"]
+ENTRYPOINT ["/env/bin/python", "/app/src/googleapis/codegen/generate_library.py"]
+#ENTRYPOINT ["generate_library"]
 
 # input: A discovery document captured from a discovery service. You can specify either input or api_name/api_version, but not both.
 # language: <java|gwt|php>: Target language for the generated library (default: 'java')
